# syscribe

./: .gitignore  404.html  CLAUDE.md  Cargo.toml  LICENSE  README.md  action.yml  index.html  mkdocs.yml  sitemap.xml
.claude/agents/: model-author.md  rust-parser.md  spec-designer.md  web-ui.md
.github/workflows/: docs.yml  qual.yml  release.yml
.plantuml/: sysml.iuml
browser/: index.html
cli/: index.html
crates/syscribe/: Cargo.toml
crates/syscribe-model/: Cargo.toml
crates/syscribe-model/src/: attack_tree.rs  baseline.rs  build_config.rs  config.rs  derive.rs  element.rs  feature_model.rs  frontmatter.rs  graph.rs  lib.rs  matchers.rs  metrics.rs  plantuml.rs  projection.rs  renderer.rs  resolver.rs  results.rs  risk.rs  sat.rs  solver.rs  suspect.rs  testplan.rs  units.rs  validator.rs  variability.rs  walker.rs
crates/syscribe-server/: Cargo.toml
crates/syscribe-server/src/: lib.rs  main.rs  state.rs
crates/syscribe-server/src/routes/: api_graph.rs  elements.rs  graph_cytoscape.rs  mod.rs  ui.rs  validation.rs  write.rs  ws.rs
crates/syscribe-server/templates/: base.html  canvas.html  element_detail.html  index.html  tree_items.html
crates/syscribe-server/tests/: source_link.rs
crates/syscribe/assets/export/: search.js  style.css
crates/syscribe/src/: audit.rs  aw.rs  baseline.rs  bcov.rs  build_config.rs  clusters.rs  coanalysis.rs  connectivity.rs  coverage.rs  cyberrisk.rs  digest.rs  discover.rs  export.rs  export_html.rs  fmea_report.rs  ftsearch.rs  help.rs  impact.rs  ingest.rs  lint_docs.rs  main.rs  matrix.rs  metrics_cmd.rs  mgreport.rs  mv.rs  n2.rs  plantuml.rs  query.rs  render.rs  repos.rs  reqif.rs  reviews.rs  safety_case.rs  sbom.rs  scaffold.rs  scripting.rs  spec.rs  stats.rs  summarize.rs  suspect.rs  (+6 more)
crates/syscribe/src/diagram/: compose.rs  list.rs  measure.rs  mod.rs  req.rs  seq.rs  solver.rs
crates/syscribe/src/diagram/layout/: astar.rs  builder.rs  engine.rs  metrics.rs  mod.rs  router.rs  theme.rs  types.rs
crates/syscribe/src/lsp/: actions.rs  completion.rs  mod.rs  rename.rs  store.rs
crates/syscribe/src/mcp/: diff.rs  mod.rs  store.rs  util.rs  variability.rs  write.rs
crates/syscribe/tests/: baseline.rs  clusters.rs  digest.rs  export_html.rs  ftsearch.rs  lsp_codeaction.rs  lsp_codelens.rs  lsp_completion.rs  lsp_diagnostics.rs  lsp_handshake.rs  lsp_navigation.rs  lsp_reload.rs  lsp_rename.rs  mcp_authoring.rs  mcp_baseline.rs  mcp_diagrams.rs  mcp_evidence.rs  mcp_live.rs  mcp_read.rs  mcp_report.rs  mcp_resources.rs  mcp_retrieval.rs  mcp_suspect.rs  mcp_variability.rs  mcp_write.rs  stats.rs  summarize.rs  suspect_links.rs  topics.rs
crates/syscribe/tests/common/: mod.rs
crates/syscribe/tests/fixtures/model/: .syscribe.toml  _index.md
crates/syscribe/tests/fixtures/model/Configurations/: CONF-FX-001.md  _index.md
crates/syscribe/tests/fixtures/model/Decisions/: ADR-FX-001.md
crates/syscribe/tests/fixtures/model/Diagrams/: FxBlock.md  FxMermaid.md  _index.md
crates/syscribe/tests/fixtures/model/Features/: Link.md  _index.md
crates/syscribe/tests/fixtures/model/Features/Link/: LoRa.md  Sat.md
crates/syscribe/tests/fixtures/model/Parts/: Base.md  Derived.md
crates/syscribe/tests/fixtures/model/Requirements/: REQ-FX-001.md  REQ-FX-003.md  REQ-FXCHILD-001.md  REQ-FXPARENT-001.md  REQ-FXPLAN-001.md  REQ-FXSAT-001.md
crates/syscribe/tests/fixtures/model/Verification/: TC-FX-001.md  TC-FXPAR-001.md  TC-FXPLAN-001.md
demo-model/: index.html
demo-model/engine-ecu/: index.html
demo-model/interlocking/: index.html
demo-model/uav/: index.html
design/suspect-links/: index.html
docs/: index.md
docs/browser/: index.md
docs/cli/: index.md
docs/demo-model/: engine-ecu.md  index.md  interlocking.md  uav.md
docs/design/: suspect-links.md
docs/format/: diagrams.md  elements.md  frontmatter.md  index.md  operations.md  spec.md
docs/guides/: architecture.md  cicd.md  concepts.md  feature-modeling.md  iec-61508.md  index.md  introduction.md  iso-21434.md  iso-26262.md  quick-reference.md  requirements.md  scripting.md  software-architecture.md  tests.md  tool-mapping.md
docs/model-guide/: adrs.md  build-export.md  custom-fields.md  index.md  llm-workflow.md  magicgrid.md  multi-repo.md  requirements.md  safety-analysis.md  state-machines.md  testplans.md  traceability.md  variability.md
docs/releases/: index.md
docs/stylesheets/: extra.css
docs/tool-qualification/: index.md
docs/validation/: index.md  rules.md
editors/vscode/: README.md  package-lock.json  package.json  tsconfig.json
firmware/drivers/: gnss.rs
firmware/flight_control/: failover.rs  mod.rs
firmware/payload/: cargo_release.rs
format/: index.html
format/diagrams/: index.html
format/elements/: index.html
format/frontmatter/: index.html
format/operations/: index.html
format/spec/: index.html
guides/: index.html
guides/architecture/: index.html
guides/cicd/: index.html
guides/concepts/: index.html
guides/feature-modeling/: index.html
guides/iec-61508/: index.html
guides/introduction/: index.html
guides/iso-21434/: index.html
guides/iso-26262/: index.html
guides/quick-reference/: index.html
guides/requirements/: index.html
guides/scripting/: index.html
guides/software-architecture/: index.html
guides/tests/: index.html
guides/tool-mapping/: index.html
model/: .syscribe.toml  README.md  _index.md
model-guide/: index.html
model-guide/adrs/: index.html
model-guide/build-export/: index.html
model-guide/custom-fields/: index.html
model-guide/llm-workflow/: index.html
model-guide/magicgrid/: index.html
model-guide/multi-repo/: index.html
model-guide/testplans/: index.html
model_auto/: .syscribe.toml  _index.md
model_mg/: .syscribe.toml  _index.md
model_sil/: .syscribe.toml  _index.md
overrides/: home.html
prompts/: create-magicgrid-model.md  create-model.md
qual/: _index.md
releases/: index.html
search/: search_index.json
spec/: markdown-sysml-format.md
stylesheets/: extra.css
tool-qualification/: index.html
validation/: index.html
(+2965 files in other folders)
