[workspace]
resolver = "2"
members = ["crates/syscribe", "crates/syscribe-model", "crates/syscribe-server"]

[workspace.dependencies]
askama = { version = "0.12" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json", "ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
anyhow = "1"
petgraph = "0.6"
notify = "6"
futures-util = "0.3"
regex = "1"
toml = "0.8"
quick-xml = "0.36"
clap = { version = "4", features = ["derive", "env"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
