[workspace]
resolver = "2"
members = ["crates/syscribe", "crates/syscribe-model", "crates/syscribe-server"]

[workspace.dependencies]
askama = { version = "0.12" }
serde = { version = "1", features = ["derive"] }
# serde_yaml (dtolnay) was deprecated/archived at 0.9.34; serde_yaml_ng is the
# drop-in community continuation. Package-renamed so all `serde_yaml::` paths are unchanged.
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json", "ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
anyhow = "1"
petgraph = "0.8"
notify = "6"
futures-util = "0.3"
regex = "1"
toml = "1"
quick-xml = "0.40"
clap = { version = "4", features = ["derive", "env"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
