[package]
name = "syscribe-model"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
petgraph = { workspace = true }
regex = { workspace = true }
