[package]
name = "syscribe-model"
version = "0.3.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
petgraph = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
