[package]
name = "syscribe-model"
version = "0.5.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
petgraph = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
# Pinned: feature-model SAT analysis engine (MIT, pure Rust, MiniSat lineage).
batsat = "=0.6.0"
