[package]
name = "syscribe-server"
version = "0.26.0"
edition = "2021"

[[bin]]
name = "syscribe-server"
path = "src/main.rs"

[dependencies]
askama = { workspace = true }
syscribe-model = { path = "../syscribe-model" }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
petgraph = { workspace = true }
notify = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
rust-embed = { workspace = true }
mime_guess = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
