[package]
name = "syscribe"
version = "0.26.20"
edition = "2021"

[[bin]]
name = "syscribe"
path = "src/main.rs"

[dependencies]
syscribe-model = { path = "../syscribe-model" }
serde_yaml = { workspace = true }
quick-xml = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
taffy = "0.11"
ab_glyph = "0.2.32"
fontdb = "0.23.0"
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
clap = "4"
cassowary = "0.3.0"
svg = "0.18.0"
pathfinding = "4"
rhai = "=1.25.1"
