[package]
name = "syscribe"
version = "0.32.0"
edition = "2021"

[[bin]]
name = "syscribe"
path = "src/main.rs"

[dependencies]
syscribe-model = { path = "../syscribe-model" }
serde_yaml = { workspace = true }
quick-xml = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
taffy = "0.11"
ab_glyph = "0.2.32"
fontdb = "0.23.0"
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
clap = "4"
cassowary = "0.3.0"
svg = "0.18.0"
pathfinding = "4"
rhai = "=1.25.1"
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
schemars = "1"
tokio = { workspace = true }
anyhow = { workspace = true }
petgraph = { workspace = true }
tower-lsp = "0.20.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
